# StraightPCF

./: filter_point_cloud.py  pyproject.toml
models/: straightpcf.py
